--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,4 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_about" android:title="About Us"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/visit_us" android:title="Visit Our Website!"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
