--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,12 +9,11 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
     android:gravity="bottom">
 
-    <ImageView android:layout_width="wrap_content"
-        android:layout_height="0dp"
+    <ImageView android:layout_width="75dp"
+        android:layout_height="75dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:layout_weight="1"
         android:layout_gravity="start"
-        android:src="@drawable/ic_android"
+        android:src="@drawable/ic_launcher"
         android:id="@+id/imageView" />
 
     <TextView android:layout_width="match_parent"
