--- a/app/src/main/res/layout/fragment_fare.xml
+++ b/app/src/main/res/layout/fragment_fare.xml
@@ -8,6 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <TextView
+            android:id="@+id/fares_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Fare"/>
