--- a/app/src/main/res/drawable/tile_background.xml
+++ b/app/src/main/res/drawable/tile_background.xml
@@ -1,8 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:state_checked="true" >
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp"/>
+            <gradient
+                android:startColor="@color/colorAccent"
+                android:centerColor="@color/colorAccent"
+                android:endColor="@color/colorAccent"
+                android:angle="90"/>
+            <stroke
+                android:color="@color/colorAccent"
+                android:width="1dp"/>
+        </shape>
+    </item>
 
+<item android:state_checked="false" >
+    <shape android:shape="rectangle">
     <corners android:radius="10dp"/>
     <gradient
         android:startColor="@color/colorPrimary"
@@ -12,4 +24,6 @@
     <stroke
         android:color="@color/colorPrimaryDark"
         android:width="1dp"/>
-</shape>
+    </shape>
+</item>
+</selector>
