added filter menus with some blood, sweat and tears

--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -24,5 +24,7 @@
         android:layout_height="35dp"
         android:layout_below="@+id/toast_info_display"
         android:background="@drawable/custom_toast_triangle"
-        android:rotation="180"/>
+        android:rotation="180"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
