--- a/app/src/main/res/layout/fragment_realtime.xml
+++ b/app/src/main/res/layout/fragment_realtime.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_below="@id/toolbar"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:paddingTop="?attr/actionBarSize">
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    android:layout_marginTop="?attr/actionBarSize">
 
         <TextView
             android:id="@+id/realtimeTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
             android:gravity="center_horizontal"
             android:padding="5dp"
             android:text="Real Time"
@@ -79,5 +75,4 @@
             android:padding="10sp"
             android:stretchMode="columnWidth"
             android:verticalSpacing="10dp" />
-    </RelativeLayout>
 </RelativeLayout>
