--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="margin">16dp</dimen>
+
     <dimen name="red_action_button_size">108dp</dimen>
     <dimen name="red_action_button_margin">48dp</dimen>
 
