--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="GlassByte" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:colorPrimaryDark">@color/lightblue300</item>
+        <item name="android:navigationBarColor">@color/lightblue700</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:colorEdgeEffect">@color/blue900</item>
+    </style>
+
 </resources>
