--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,11 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
     </style>
+
+    <style name="GlassByte" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:colorPrimaryDark">@color/lightblue300</item>
+        <item name="android:navigationBarColor">@color/lightblue700</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:colorEdgeEffect">@color/blue900</item>
+    </style>
 </resources>
