added most of intro activity, nothing is saved and leap details need to be created

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,4 +7,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/visit_us" android:title="Visit Our Website!"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/intro" android:title="Intro Activity"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
