--- a/app/src/main/res/layout/slide_one.xml
+++ b/app/src/main/res/layout/slide_one.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/slide_one"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2C078"
     android:layout_weight="10"
-    android:id="@+id/slide_one">
+    android:background="#034748"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="32dp"
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
-        android:textColor="#ffffff"
+        android:gravity="center"
+        android:paddingLeft="32dp"
         android:paddingRight="32dp"
-        android:textSize="28sp"
-        android:text="Welcome to iompar!"/>
+        android:text="Welcome to iompar!"
+        android:textColor="#ffffff"
+        android:textSize="28sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:layout_weight="5"
         android:gravity="center"
-        android:layout_weight="5">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -32,19 +33,51 @@
             android:layout_gravity="center"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:src="@drawable/ic_launcher"/>
+            android:src="@drawable/ic_launcher" />
     </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="3"
         android:layout_gravity="center"
+        android:layout_weight="3"
         android:gravity="center"
-        android:textColor="#ffffff"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:textSize="16sp"
-        android:text="The all-round transportation app for Ireland."/>
+        android:text="The all-round transportation app for Ireland."
+        android:textColor="#ffffff"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:layout_gravity="center_horizontal">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/irish_pref_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:paddingEnd="64dp"
+                android:text="Use app in Irish Gaelic"
+                android:textColor="#ffffff" />
+
+            <Switch
+                android:id="@+id/switch_pref_irish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/irish_pref_text" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="64dp" />
