--- a/app/src/main/res/layout/slide_three.xml
+++ b/app/src/main/res/layout/slide_three.xml
@@ -7,50 +7,146 @@
     android:background="#BF9F87"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="3"
-        android:fontFamily="sans-serif-thin"
-        android:gravity="center"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:text="Have you a Leap card?"
-        android:textColor="#ffffff"
-        android:textSize="28sp" />
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
-        android:orientation="vertical">
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <!--> leap info, language preference <-->
 
         <RelativeLayout
-            android:layout_gravity="center"
+            android:id="@+id/payment_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
 
             <TextView
-                android:gravity="center"
-                android:id="@+id/irish_pref_text"
+                android:fontFamily="sans-serif-thin"
+                android:id="@+id/payment_title_preference"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Use app in Irish Gaelic"
-                android:paddingEnd="64dp"
-                android:layout_centerInParent="true" />
-
-            <Switch
-                android:layout_alignRight="@+id/irish_pref_text"
-                android:id="@+id/switch_pref_irish"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:paddingBottom="16dp"
+                android:text="Payment Preference"
+                android:textSize="28sp" />
         </RelativeLayout>
 
 
+        <RelativeLayout
+            android:id="@+id/payment_options_cash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/cash_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:paddingEnd="64dp"
+                android:text="I pay using cash" />
+
+            <Switch
+                android:id="@+id/switch_pref_cash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/cash_text" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/payment_options_leap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/leap_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="false"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:paddingEnd="64dp"
+                android:text="I pay using Leap" />
+
+            <Switch
+                android:id="@+id/switch_pref_leap"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/leap_text" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:fontFamily="sans-serif-thin"
+            android:id="@+id/leap_info_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:text="Leap Information"
+            android:textSize="28sp" />
+
+        <RelativeLayout
+            android:id="@+id/leap_login_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingEnd="64dp"
+            android:paddingStart="64dp">
+
+            <EditText
+                android:id="@+id/leap_username"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Username"
+                android:inputType="textPersonName"
+                android:maxLines="1" />
+
+            <EditText
+                android:id="@+id/leap_number"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/leap_username"
+                android:gravity="center"
+                android:hint="Leap Card Number"
+                android:paddingTop="12dp"
+                android:inputType="number"
+                android:maxLines="1" />
+
+            <EditText
+                android:id="@+id/leap_email"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/leap_number"
+                android:gravity="center"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:paddingTop="12dp" />
+
+            <EditText
+                android:id="@+id/leap_password"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/leap_email"
+                android:gravity="center"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:paddingTop="12dp" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -62,7 +158,7 @@
         android:gravity="center"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:text="Almost there"
+        android:text="Leap cards make transport quicker, easier, and cheaper.\n\nMake sure to register it online so you can access your balance here."
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
