--- a/app/src/main/res/layout/slide_three.xml
+++ b/app/src/main/res/layout/slide_three.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:animateLayoutChanges="true"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="7"
