--- a/app/src/main/res/layout/slide_four.xml
+++ b/app/src/main/res/layout/slide_four.xml
@@ -17,7 +17,7 @@
         android:textColor="#ffffff"
         android:paddingRight="32dp"
         android:textSize="28sp"
-        android:text="What now?"/>
+        android:text="@string/slide_four_title"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -43,7 +43,7 @@
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
         android:textSize="16sp"
-        android:text="iompar helps you track your public transport and expenditures intelligently.\n\nMonitor your spending and never miss that journey again."/>
+        android:text="@string/slide_four_desc"/>
 
     <TextView
         android:layout_width="fill_parent"
