--- a/app/src/main/res/layout/slide_one.xml
+++ b/app/src/main/res/layout/slide_one.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/slide_one_title"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -16,7 +17,7 @@
         android:gravity="center"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
-        android:text="Welcome to iompar"
+        android:text="@string/slide_one_welcome"
         android:textColor="#ffffff"
         android:textSize="28sp" />
 
@@ -37,6 +38,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/slide_one_desc"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -44,7 +46,7 @@
         android:gravity="center"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:text="The all-round transportation app for Ireland."
+        android:text="@string/slide_one_description"
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
@@ -66,7 +68,7 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:paddingEnd="64dp"
-                android:text="Use app in Irish Gaelic"
+                android:text="@string/slide_one_irish_option"
                 android:textColor="#ffffff" />
 
             <Switch
