--- a/app/src/main/res/layout/slide_two.xml
+++ b/app/src/main/res/layout/slide_two.xml
@@ -17,7 +17,7 @@
         android:textColor="#ffffff"
         android:paddingRight="32dp"
         android:textSize="28sp"
-        android:text="What's your name?"/>
+        android:text="@string/slide_two_title"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -29,12 +29,13 @@
         android:paddingRight="64dp">
 
         <EditText
+            android:id="@+id/intro_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:maxLines="1"
             android:inputType="textPersonName"
-            android:hint="Your name"
+            android:hint="@string/slide_two_hint"
             android:layout_gravity="center"/>
     </LinearLayout>
     <TextView
@@ -47,7 +48,7 @@
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
         android:textSize="16sp"
-        android:text="This can be changed later under settings"/>
+        android:text="@string/slide_two_description"/>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="64dp" />
