--- a/app/src/main/res/layout/slide_two.xml
+++ b/app/src/main/res/layout/slide_two.xml
@@ -7,6 +7,7 @@
     android:id="@+id/slide_one">
 
     <TextView
+        android:id="@+id/slide_two_title"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -39,6 +40,7 @@
             android:layout_gravity="center"/>
     </LinearLayout>
     <TextView
+        android:id="@+id/slide_two_desc"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="3"
