--- a/app/src/main/res/layout/fragment_realtime.xml
+++ b/app/src/main/res/layout/fragment_realtime.xml
@@ -1,76 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_below="@id/toolbar"
     android:layout_marginTop="?attr/actionBarSize">
 
-    <RelativeLayout
-        android:id="@+id/infopanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-        <LinearLayout
-            android:id="@+id/firstLayout"
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:id="@+id/infopanel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/secondView"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_marginTop="5dp">
 
-            <TextView
-                android:id="@+id/leftpanel"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/firstLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center" />
-        </LinearLayout>
+                android:layout_toLeftOf="@+id/secondView"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-        <View
-            android:id="@+id/secondView"
-            android:layout_width="1dp"
-            android:layout_height="90dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/colorPrimary" />
+                <TextView
+                    android:id="@+id/leftpanel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center" />
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/thirdLayout"
+            <View
+                android:id="@+id/secondView"
+                android:layout_width="1dp"
+                android:layout_height="90dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/colorPrimary" />
+
+            <LinearLayout
+                android:id="@+id/thirdLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/secondView"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/rightpanel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/secondView"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/infopanel">
 
-            <TextView
-                android:id="@+id/rightpanel"
-                android:layout_width="wrap_content"
+            <GridView
+                android:id="@+id/gridview"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center" />
-        </LinearLayout>
+                android:layout_below="@+id/infopanel"
+                android:columnWidth="90dp"
+                android:gravity="center"
+                android:horizontalSpacing="10dp"
+                android:numColumns="auto_fit"
+                android:padding="10sp"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/infopanel">
-
-        <GridView
-            android:id="@+id/gridview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/infopanel"
-            android:columnWidth="90dp"
-            android:gravity="center"
-            android:horizontalSpacing="10dp"
-            android:numColumns="auto_fit"
-            android:padding="10sp"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp" />
-    </android.support.v4.widget.SwipeRefreshLayout>
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_margin="@dimen/fab_margin"
+        android:id="@+id/add_expenditure_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_white_48dp"
+        android:layout_gravity="bottom|end"
+        app:fabSize="normal"
+        app:rippleColor="@color/fabRipple"/>
+</android.support.design.widget.CoordinatorLayout>
